chase first commit

--- a/index.html
+++ b/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="style.css">
+    <title>Coffee</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection">
 </head>
-<body>
-    <h1>Coffee</h1>
+<body background="pics/pagebackround.jpg">
 
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input id="submit" type="submit" />
-    </form>
+<div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">SC</a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="">News</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+<div class="hero-image">
+    <div class="hero-text">
+        <h1>Surplus Coffee</h1>
+        <p>Just like the Army, but worse.</p>
+    </div>
+</div>
 
-    <script src="main.js"></script>
+<script src="js/materialize.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
