--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection">
+
 </head>
 <body background="pics/pagebackround.jpg">
 
@@ -27,8 +28,17 @@
         <p>Just like the Army, but worse.</p>
     </div>
 </div>
+<div class="input-field col s12">
+    <select multiple>
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">Option 1</option>
+        <option value="2">Option 2</option>
+        <option value="3">Option 3</option>
+    </select>
+    <label>Materialize Multiple Select</label>
+</div>
 
-<script src="js/materialize.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/materialize.min.js"></script>
 </body>
 </html>
