--- a/index.html
+++ b/index.html
@@ -28,14 +28,38 @@
         <p>Just like the Army, but worse.</p>
     </div>
 </div>
-<div class="input-field col s12">
-    <select multiple>
-        <option value="" disabled selected>Choose your option</option>
-        <option value="1">Option 1</option>
-        <option value="2">Option 2</option>
-        <option value="3">Option 3</option>
-    </select>
-    <label>Materialize Multiple Select</label>
+
+<div class="container">
+<form>
+    <label for="browser-default roast-select">Select Roast</label>
+        <select class="browser-default roast-select">
+            <option value="" disabled selected>Choose your option</option>
+            <option value="1">Light</option>
+            <option value="2">Medium</option>
+            <option value="3">Dark</option>
+        </select>
+    <label for="submit"></label>
+    <input id="submit" type="submit" />
+</form>
+
+<table>
+    <thead>
+    <tr style="color: white">
+    </tr>
+    </thead>
+    <tbody id="coffees"></tbody>
+</table>
+
+<div class="row">
+    <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+            <div class="card-content white-text">
+                <span class="card-title">Light City</span>
+                <p>Light</p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 <script src="js/main.js"></script>
