--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection">
 
 </head>
-<body background="pics/pagebackround.jpg">
+<body>
 
 <div class="navbar-fixed">
     <nav>
