--- a/index.html
+++ b/index.html
@@ -8,18 +8,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+/*NAVBAR*/
+
 <div class="navbar">
     <a class="navbar-brand" href="#">SC</a>
-    <a class="navbar-nav ml-auto" href="#home">Home</a>
-    <a href="#news">News</a>
+    <a class="navbar-nav ml-auto" href="#">Home</a>
+    <a href="#order">Order Coffee</a>
 </div>
+
+/*HEAD BANNER*/
+
 <div class="container mb-3 mx-auto">
     <div class="hero-image">
         <div class="hero-text">
-            <h1>Surplus Coffee</h1>
-            <p>Just like the Army, but worse.</p>
+            <h1>Surplus Coffee.</h1>
+            <h4>Just like the Army...but better.</h4>
         </div>
     </div>
+
+    <!--BIO-->
+
+    <div class="container mb-3 mx-auto">
+        <div class="hero-image" id="bio-box">
+            <div class="hero-text" id="bio-text">
+                <p>We started <strong>Surplus</strong> in 2018 on the basis of a <br><em>realistic</em> coffee. Both of us being Veterans<br> means we know a shitty coffee when we<br> find one. Our promise to our customers is to <br><strong>Take strides everyday in making a better coffee!</strong></p>
+            </div>
+        </div >
+
+        <!--THE REST OF IT-->
+
     <div class="row">
         <div class="col-7 pl-0">
             <div id="cup-size" class="row mb-3">
@@ -91,6 +109,7 @@
         </div>
 
     </div>
+</div>
 </div>
 <script src="js/main.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
